students/BulavskiyAndrey/task_02/k8s/overlays/dev/patches/server-replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
