students/BulavskiyAndrey/task_02/k8s/overlays/dev/patches/web-replicas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
